feat: integrate Prisma with SQLite database

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ CLERK_SECRET_KEY=PASTE_HERE
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+DATABASE_URL="file:./dev.db"
